# soda

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DESIGN.md  README.md  TODO.md
include/core/api/database/: Database.hpp  DatabaseExceptions.hpp  Exceptions.hpp
include/core/api/repository/: Exceptions.hpp  Repository.hpp
include/core/data/metadata/: ContentMetadata.hpp  Exceptions.hpp
include/core/data/schema/: Exceptions.hpp  Schema.hpp  SchemaField.hpp
include/core/enums/: EDataType.hpp  Exceptions.hpp
include/util/: DirectoryFactory.hpp  StringValidator.hpp
src/: CMakeLists.txt
src/core/api/data/schema/: SchemaField.cpp
src/core/api/database/: Database.cpp  TestDatabase.cpp
src/core/api/repository/: Repository.cpp  TestRepository.cpp
src/core/data/metadata/: ContentMetadata.cpp
src/core/data/schema/: Schema.cpp  SchemaField.cpp
src/core/enums/: EDataType.cpp
src/util/: DirectoryFactory.cpp  StringValidator.cpp  TestDirectoryFactory.cpp
tests/: CMakeLists.txt  TestUtil.hpp
tests/core/api/database/: CMakeLists.txt  CreateDatabaseTest.cpp  DropDatabaseTest.cpp  ListDatabaseTest.cpp  RenameDatabaseTest.cpp
tests/core/api/repository/: CMakeLists.txt  CreateRepositoryTest.cpp  DropRepositoryTest.cpp  RenameRepositoryTest.cpp
tests/core/data/metadata/: CMakeLists.txt  ContentMetadataTest.cpp
tests/core/data/schema/: CMakeLists.txt  SchemaFieldTest.cpp  SchemaTest.cpp
tests/util/: CMakeLists.txt  StringValidatorTest.cpp
